# bayou-protocol

./: Cargo.toml  README  README.md
src/: lib.rs
src/protocol/ap_protocol/: fetch.rs  signature.rs  verification.rs
src/protocol/versia_protocol/: requests.rs  verify.rs
src/types/: mod.rs
src/types/activitystream_objects/: actors.rs  collections.rs  inboxable.rs  mod.rs  note.rs  postable.rs  public_key.rs  share.rs
src/types/versia_types/entities/: instance_metadata.rs  mod.rs  public_key.rs  user.rs
